# pycounts_zanan_524

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  einstein.txt  example.ipynb  make.bat
src/pycounts_zanan_524/: __init__.py  plotting.py  pycounts.py
tests/: test_pycounts_zanan_524.py
