[tool.poetry]
name = "pycounts_zanan_524"
version = "0.1.0"
description = "Count words from a text file!"
authors = ["Zanan Pech"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.11"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
