[tool.poetry]
name = "pycounts_zanan_524"
version = "0.1.0"
description = "Count words from a text file!"
authors = ["Zanan Pech"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.11"
matplotlib = ">=3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
jupyter = "^1.1.1"
myst-nb = {version = "^1.1.2", python = "^3.9"}
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
